<resources>
    <string name="app_name">FoodSavior</string>
    <string name="motto">\"Food are meant for sharing and not for wasting\"</string>
    <string name="reminder_2_title">Add New Reminder: </string>
    <string name="food_category">Food Category: </string>
    <string name="food_name">Food Name: </string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="remind_at">Remind At: </string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">WELCOME TO FOOD SAVIOR!</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_register">REGISTER</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="btn_login">LOGIN</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="select_expiry_date">Select your expiry date</string>
    <string name="food_name_hint">Enter food name</string>
    <string name="clear">Clear</string>
    <string name="quantity">Quantity:</string>
    <string name="food_donation_name">Food Name:</string>
    <string name="donation_title">Share Excess Food</string>
    <string name="take_picture">Take Picture</string>
    <string name="food_qty_hint">Enter food qty</string>
    <string name="login">LOGIN</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="user_id">User ID</string>
    <string name="register_user_name">User Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="msg_forgot_password">Please enter your email to reset password!</string>
    <string name="reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="edit">Edit</string>
    <string name="remind_date">Remind Date:</string>
    <string name="description">We started Food Savior App because after investigation we found that nowadays has high food wastage. Society tend to buy more food than they actually need. Besides that, extra foods are thrown out before it has the chance to be consume due to the expiry date.
        Thats why we offer services with foods expiry date reminder and food donation and request. Along the way, we will able to reduce the problems of high food wastage. We need to be more environmentally friendly and reduce food wastage.</string>
    <string name="here">Here are our nearby locations :</string>
    <string name="about_us">About Us</string>
    <string name="location1">PT322, Jalan Sri Maju, 53300 Setapak, Kuala Lumpur.</string>
    <string name="location2">Lot-20, Jalan Bunga Raya, 78890 Petaling Jaya, Selangor.</string>
    <string name="location3">No58, Jalan Mahkota, 52500 Bukit Bintang, Kuala Lumpur.</string>
    <string name="tel1">03-23456789</string>
    <string name="email1">foodsavior@gmail.com</string>
    <string name="tel2">03-22118000</string>
    <string name="tel3">03-98387660</string>
    <string name="back">Back</string>
</resources>