<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    android:elevation="80dp"
    android:id="@+id/remindercardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/foodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/foodCategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/food_category" />

            <TextView
                android:id="@+id/foodCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_margin="10dp"
                android:layout_toRightOf="@id/foodCategoryTitle"
                android:layout_alignBaseline="@id/foodCategoryTitle"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/foodExpiryDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/expiry_date" />

            <TextView
                android:id="@+id/foodExpiryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20dp"
                android:layout_toRightOf="@id/foodExpiryDateTitle"
                android:layout_alignBaseline="@id/foodExpiryDateTitle"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/foodRemindAtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/remind_at" />

            <TextView
                android:id="@+id/foodRemindAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20dp"
                android:layout_toRightOf="@id/foodRemindAtTitle"
                android:layout_alignBaseline="@id/foodRemindAtTitle"/>
        </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editButton"
                android:text="@string/edit"
                android:background="#43D786"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cancelButton"
                android:text="@string/cancel"
                android:background="#43D786"
                android:layout_margin="5dp"/>

    </LinearLayout>

</ScrollView>