<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center"
    android:background="@color/colorBG"
    tools:context="com.example.ellyn.assignment.Registration">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBG"
        android:gravity="center">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="20dp"
            android:padding="15dp"
            android:textStyle="normal|bold" />


        <EditText
            android:id="@+id/rEditname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:drawablePadding="20dp"
            android:hint="@string/full_name"
            android:padding="15dp"
            android:paddingLeft="20dp" />


        <EditText
            android:id="@+id/rEdituserid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rEditname"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"

            android:drawablePadding="20dp"
            android:hint="@string/user_id"
            android:padding="15dp"
            android:paddingLeft="20dp" />


        <EditText
            android:id="@+id/rEditphoneno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rEdituserid"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:drawableLeft="@drawable/ic_phone_android_black_24dp"
            android:drawablePadding="20dp"
            android:hint="@string/phone_number"
            android:padding="15dp"
            android:paddingLeft="20dp" />


        <EditText
            android:id="@+id/rEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rEditphoneno"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="0dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:paddingLeft="20dp" />


        <EditText
            android:id="@+id/rEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rEditEmail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:drawableLeft="@drawable/ic_https_black_24dp"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:paddingLeft="20dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rEditPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btn_link_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_register"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-3dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="7dp"
            android:background="@null"
            android:backgroundTint="@color/colorBG"
            android:padding="15dp"
            android:text="@string/already_a_member_login"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_below="@+id/btn_link_login"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

    </RelativeLayout>
</ScrollView>