<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="294dp"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="372dp"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="461dp"
        app:layout_constraintGuide_percent="1.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reminder2title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:paddingStart="20dp"
                android:text="@string/reminder_2_title"
                android:textSize="25dp" />/>

            <TextView
                android:id="@+id/reminder2category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reminder2title"
                android:paddingStart="20dp"
                android:text="@string/food_category"
                android:textSize="15dp" />

            <Spinner
                android:id="@+id/categoryspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reminder2title"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_toRightOf="@id/reminder2category"
                android:paddingEnd="20dp"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/reminder2name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reminder2category"
                android:paddingStart="20dp"
                android:text="@string/food_name"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/enterfoodname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryspinner"
                android:layout_marginLeft="74dp"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@id/reminder2name"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingEnd="20dp"
                android:text="@string/food_name_hint"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/reminder2expirydate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reminder2name"
                android:layout_toLeftOf="@id/reminder2expirydate"
                android:paddingStart="20dp"
                android:text="@string/expiry_date"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/reminder2selectdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/enterfoodname"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="-1dp"
                android:layout_toRightOf="@id/reminder2expirydate"
                android:paddingStart="20dp"
                android:text="@string/expiry_date"
                android:textSize="15dp" />
        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>